adjust script in index.html, move firebase import statements into script.js

--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
     </div>
 
     <!-- Firebase SDK -->
-    <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-    import { getFirestore } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
-    </script>
+<script type="module" src="script.js"></script>
 
 </body>
 </html>
