add score submission options

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <h2>Leaderboard</h2>
         <!-- Leaderboard entries will go here -->
     </div>
-
+    <div id="scoreSubmission" style="display: none;">
+        <input type="text" id="playerName" placeholder="Enter your name" />
+        <button id="submitScoreButton">Submit Score</button>
+    </div>
     <!-- Firebase SDK -->
 <script type="module" src="script.js"></script>
 
