adjust leaderboard location

--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
 </head>
 <body>
     <div class="container">
-        <h1>Nokia Snake</h1>
+        <h1>Snake</h1>
         <p class="score">Score: <span id="score">0</span></p>
-        <canvas id="gameCanvas" width="320" height="320"></canvas>
+        <div class="game-container">
+            <canvas id="gameCanvas" width="320" height="320"></canvas>
+            <div id="leaderboard">
+                <h2>Leaderboard</h2>
+                <!-- Leaderboard entries will go here -->
+            </div>
+        </div>
         <br>
         <button id="newGameButton">New Game</button>
-    </div>
-    <div id="leaderboard">
-        <h2>Leaderboard</h2>
-        <!-- Leaderboard entries will go here -->
     </div>
     <div id="scoreSubmission" style="display: none;">
         <input type="text" id="playerName" placeholder="Enter your name" />
         <button id="submitScoreButton">Submit Score</button>
     </div>
     <!-- Firebase SDK -->
-<script type="module" src="script.js"></script>
-
+    <script type="module" src="script.js"></script>
 </body>
 </html>
