adjust html for leaderboard header

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
         <button id="newGameButton">New Game</button>
     </div>
         <div id="leaderboard">
-            <h2>Leaderboard</h2>
-            <!-- Leaderboard entries will go here -->
-        </div>
+            <div class="leaderboard-header">
+                <strong>Leaderboard</strong>
+            </div>
+    <!-- Dynamic entries will go below -->
+</div>
     <div id="scoreSubmission" style="display: none;">
         <input type="text" id="playerName" placeholder="Enter your name" />
         <button id="submitScoreButton">Submit Score</button>
