--- a/index.html
+++ b/index.html
@@ -16,16 +16,23 @@
         <br>
         <button id="newGameButton">New Game</button>
     </div>
-        <div id="leaderboard">
-            <div class="leaderboard-header">
-                <strong>Leaderboard</strong>
-            </div>
-    <!-- Dynamic entries will go below -->
-</div>
-    <div id="scoreSubmission" style="display: none;">
-        <input type="text" id="playerName" placeholder="Enter your name" />
-        <button id="submitScoreButton">Submit Score</button>
+    
+    <div id="leaderboard">
+        <div class="leaderboard-header">
+            <strong>Leaderboard</strong>
+        </div>
+        <!-- Dynamic entries will go below -->
     </div>
+
+    <!-- Score submission form -->
+    <div id="scoreSubmission" style="display: none;">
+        <div class="form-container">
+            <h2>Submit Your Score</h2>
+            <input type="text" id="playerName" placeholder="Enter your name" />
+            <button id="submitScoreButton">Submit Score</button>
+        </div>
+    </div>
+
     <!-- Firebase SDK -->
     <script type="module" src="script.js"></script>
 </body>
