--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   </head>
   <body>
     <div class="container">
-      <div>
-        <div class="header">
-            <h1>Snake</h1>
-            <p class="score">Score: <span id="score">0</span></p>
-        </div>
-        <div class="game-container">
-          <canvas id="gameCanvas" width="320" height="320"></canvas>
-          <!-- Score submission form -->
+      <div class="header">
+        <h1>Snake</h1>
+        <p>Score: <span id="score">0</span></p>
+      </div>
+
+      <div class="game-container">
+        <!-- Score submission form -->
+        <div>
+          <button id="newGameButton">New Game</button>
           <div id="scoreSubmission" style="display: none">
             <div class="form-container">
               <h2>Submit Your Score</h2>
@@ -28,14 +29,13 @@
             </div>
           </div>
         </div>
-        <br />
-        <button id="newGameButton">New Game</button>
-      </div>
-      <div id="leaderboard">
-        <div class="leaderboard-header">
-          <h2>Leaderboard</h2>
+        <canvas id="gameCanvas" width="320" height="320"></canvas>
+        <div id="leaderboard">
+          <div class="leaderboard-header">
+            <h2>Leaderboard</h2>
+          </div>
+          <!-- Dynamic entries will go below -->
         </div>
-        <!-- Dynamic entries will go below -->
       </div>
     </div>
     <!-- Firebase SDK -->
