--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <div class="game-container">
         <!-- Score submission form -->
-        <div>
+        <div class="left-panel">
           <button id="newGameButton">New Game</button>
           <div id="scoreSubmission" style="display: none">
             <div class="form-container">
@@ -30,9 +30,11 @@
           </div>
         </div>
         <canvas id="gameCanvas" width="320" height="320"></canvas>
-        <div id="leaderboard">
-          <div class="leaderboard-header">
-            <h2>Leaderboard</h2>
+        <div class="right-panel">
+          <div id="leaderboard">
+            <div class="leaderboard-header">
+              <h2>Leaderboard</h2>
+            </div>
           </div>
           <!-- Dynamic entries will go below -->
         </div>
