refactor: restructure project by moving files to src directory and removing unused code

--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,7 @@
               <input
                 type="text"
                 id="playerName"
-                placeholder="Enter your name"
-              />
+                placeholder="Enter your name" />
               <button id="submitScoreButton">Submit Score</button>
             </div>
           </div>
