refactor: update score submission form behavior for better user experience

--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
           <div
             id="scoreSubmission"
             class="form-container"
-            style="display: none">
+            style="pointer-events: none; opacity: 0.5">
             <h2>Submit Your Score</h2>
-            <input type="text" id="playerName" placeholder="Enter your name" />
-            <button id="submitScoreButton">Submit Score</button>
+            <input
+              type="text"
+              id="playerName"
+              placeholder="Enter your name"
+              disabled />
+            <button id="submitScoreButton" disabled>Submit Score</button>
           </div>
         </section>
 
