--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nokia Snake Game</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
     <div class="container">
@@ -45,6 +45,6 @@
         </section>
       </main>
     </div>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="src/script.js"></script>
   </body>
 </html>
