--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
+    <div id="customModal" class="custom-modal">
+      <p id="modalMessage" class="modal-message"></p>
+      <button id="modalButton" class="modal-button">OK</button>
+    </div>
+
     <div class="container">
       <!-- Header Section -->
       <header class="header">
