feat: add snake selection UI and implement skin toggle functionality

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
         <!-- Game Canvas -->
         <section class="game-area">
           <canvas id="gameCanvas" width="320" height="320"></canvas>
+          <div id="snakeSelection" class="snake-selection">
+            <button id="snakeSelectionToggle" class="snake-selection-toggle">
+              Select Snake
+            </button>
+            <p class="selected-snake">
+              <span class="selected-snake" id="selectedSnake">Coral</span>
+            </p>
+          </div>
         </section>
 
         <!-- Right Panel -->
