--- a/index.html
+++ b/index.html
@@ -42,10 +42,14 @@
         <section class="game-area">
           <canvas id="gameCanvas" width="320" height="320"></canvas>
           <div class="controls">
-            <button id="upButton" class="control-button">↑</button>
-            <button id="leftButton" class="control-button">←</button>
-            <button id="downButton" class="control-button">↓</button>
-            <button id="rightButton" class="control-button">→</button>
+            <div class="upperButtons">
+              <button id="upButton" class="control-button">↑</button>
+            </div>
+            <div class="lowerButtons">
+              <button id="leftButton" class="control-button">←</button>
+              <button id="downButton" class="control-button">↓</button>
+              <button id="rightButton" class="control-button">→</button>
+            </div>
           </div>
           <div id="snakeSelection" class="snake-selection">
             <button id="snakeSelectionToggle" class="snake-selection-toggle">
